<resources>
    <string name="app_name">Electric Buddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_address">Please Enter Address</string>
    <string name="getAddress">Get Address</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="testing">Testing</string>
    <string-array name="nav_array">
        <item>Main Search</item>
        <item>Favorites</item>
        <item>Settings</item>
        <item>About Us</item>
    </string-array>
    <string-array name="PreferencesGroupItems">
        <item>Option1</item>
        <item>Option2</item>
        <item>Option3</item>
    </string-array>
    <string-array name="PreferencesGroupValues">
        <item>OPT1</item>
        <item>OPT2</item>
        <item>OPT3</item>
    </string-array><string-array name="chargeType">
        <item>All</item>
        <item>Public</item>
        <item>Private</item>
    </string-array><string-array name="chargeValues">
        <item>All</item>
        <item>OPT2</item>
        <item>OPT3</item>
    </string-array>

    <string-array name="empty_array"/>

    <string name="stationName">Name</string>
    <string name="address">Address</string>
    <string name="distance">Distance</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="url">Website</string>
    <string name="operator">Operator</string>
    <string name="connLevelTitle">Level</string>
    <string name="connType">Connection Type</string>
    <string name="id">Id</string>
    <string name="amps">Amps</string>
    <string name="voltage">Voltage</string>
    <string name="showMap">Show On Map</string>
    <string name="searchSettingsPref">Choose Default Search Settings</string>
    <string name="usage">Usage</string>
    <string name="quanitity">Qty</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="aboutUsIntro">
        We as a company strive to make great products and applications that people around the
        world enjoy.
    </string>
    <string name="aboutUs2">
        Welcome to Electronic Buddy, your number one source for discovering Electronic Charging Stations close to you.
        We’re dedicated to giving you the very best listings, with a focus on speed, dependability, and customer service.
    </string>
    <string name="aboutUs3">
        We hope you enjoy our products as much as we enjoy offering them to you. If you have any questions or comments,
        please don’t hesitate to contact us.
    </string>
    <string name="aboutUsEnd1"> Sincerely,</string>
    <string name="aboutUsEnd2"> Electronic Buddy</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>

</resources>
