<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tyson.electricbuddy.AboutFragment"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:paddingTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/aboutUsIntro"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/aboutUs2"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/aboutUs3"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4"
        android:text="@string/aboutUsEnd1"
        android:gravity="left"
        android:layout_marginLeft="20dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:id="@+id/imageView2"
        android:layout_weight="1"
        android:gravity="left"
        android:src="@mipmap/ic_launcher"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/aboutUsEnd2"
        android:gravity="left"
        android:layout_marginLeft="20dp"/>


</LinearLayout>
