<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:orientation="vertical"
    android:padding="2dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardElevation="4sp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/usage"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="#020"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".6"
                android:layout_marginTop="6dp">

                <TextView
                    android:id="@+id/stationName"
                    style="?android:textAppearanceLarge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:textScaleX="1.2"
                    android:textSize="22dp" />

                <CheckBox
                    android:id="@+id/favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:button="@drawable/star" />

            </LinearLayout>

            <TextView
                android:id="@+id/address"
                style="?android:textAppearanceMedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/townStateZIP"
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4" />

                <TextView
                    android:id="@+id/distance"
                    style="?android:textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"/>
            </LinearLayout>

            <FrameLayout
                android:id="@+id/maps"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingLeft="12dp"
                android:paddingRight="12dp" />
            <!--<Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/showMap" />-->

            <View
                android:id="@+id/callDivUp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/call"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:clickable="true">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_communication_call" />

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:layout_weight=".4"
                    android:text="Call:" />

                <TextView
                    android:id="@+id/telephone"
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:textColor="@color/textLabel" />
            </LinearLayout>

            <View
                android:id="@+id/emailDivUp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:id="@+id/emailLinLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_communication_email" />

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:layout_weight=".4"
                    android:text="E-Mail:" />

                <TextView
                    android:id="@+id/email"
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:textColor="@color/textLabel" />
            </LinearLayout>

            <View
                android:id="@+id/urlDivUp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_action_language" />

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:layout_weight=".4"
                    android:text="Go To:" />

                <TextView
                    android:id="@+id/url"
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:textColor="@color/textLabel" />
            </LinearLayout>

            <View
                android:id="@+id/operDivUp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".2"
                    android:src="@drawable/ic_action_settings_input_hdmi" />

                <TextView
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="14dp"
                    android:layout_weight=".4"
                    android:text="Oprtr:" />

                <TextView
                    android:id="@+id/operator"
                    style="?android:textAppearanceMedium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="2"
                    android:textColor="@color/textLabel" />

            </LinearLayout>

            <View
                android:id="@+id/urlDivDown"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray" />

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".9"
                android:background="#FF0000">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/idLabel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="0.3"
                        android:background="@color/material_blue_500"
                        android:gravity="center_horizontal"
                        android:text="@string/quanitity"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/connTypeLabel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="0.3"
                        android:background="@color/material_blue_500"
                        android:gravity="center_horizontal"
                        android:text="@string/connType"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/levelLabel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="0.3"
                        android:background="@color/material_blue_500"
                        android:gravity="center_horizontal"
                        android:text="@string/connLevelTitle"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/ampsLabel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="0.3"
                        android:background="@color/material_blue_500"
                        android:gravity="center_horizontal"
                        android:text="@string/amps"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/voltLabel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="0.3"
                        android:background="@color/material_blue_500"
                        android:gravity="center_horizontal"
                        android:text="@string/voltage"
                        android:textColor="@android:color/white" />

                    <TextView
                        android:id="@+id/powerkwLabel"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="1dip"
                        android:layout_weight="0.3"
                        android:background="@color/material_blue_500"
                        android:gravity="center_horizontal"
                        android:text="PowerKW"
                        android:textColor="@android:color/white" />

                </TableRow>
                <!--<View android:layout_width="2dp"
                    android:layout_height="match_parent"/>-->
            </TableLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
